--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dierci",
+  "name": "element-admin",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,10 +8,24 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons": "^0.0.11",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "css-color-function": "^1.3.3",
+    "dayjs": "^1.10.7",
+    "element-plus": "^1.2.0-beta.3",
+    "file-saver": "^2.0.5",
+    "fuse.js": "^6.4.6",
+    "md5": "^2.3.0",
+    "reset-css": "^5.0.1",
+    "rgb-hex": "^4.0.0",
+    "screenfull": "^5.1.0",
+    "vue": "^3.2.8",
+    "vue-i18n": "^9.2.0-beta.21",
+    "vue-router": "^4.0.11",
+    "vue3-print-nb": "^0.1.4",
+    "vuex": "^4.0.2",
+    "xlsx": "^0.17.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -29,8 +43,10 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2"
+    "sass": "^1.27.0",
+    "sass-loader": "^10.0.4",
+    "svg-sprite-loader": "^6.0.11",
+    "vue-cli-plugin-element-plus": "~0.0.13"
   },
   "config": {
     "commitizen": {
